extract: keep a glued bracket-and-angle value run, a swallowed alias, a slash alias
A value spec mixing bracket groups and angle placeholders keeps its whole
source spelling, a third single-dash-long spelling after a valued long form
survives, and a `/`-joined alias is read outside a lowdown bullet.
docs/shapes.md S-158, S-160, S-161.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>